small spacing issues fixed

--- a/hangman/main.css
+++ b/hangman/main.css
@@ -2,6 +2,11 @@ html * {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
+table {
+  border-spacing: 5px;
+  border-collapse: separate;
+}
+
 .container {
   width: 100%;
   height: 100vh;
@@ -53,7 +58,7 @@ html * {
   background-color: #ff5900;
   color: white;
   transform: scale(1.2);
-  transition: all .2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 .correct {
@@ -69,18 +74,17 @@ html * {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  height: 80px;
+  height: 40px;
   width: 100%;
   margin: auto;
   text-align: center;
-
 }
 
 .guess-line {
   text-align: center;
   width: 50px;
   margin: 0.3em;
-  padding-top: 20px;
+  padding-bottom: 1.2em;
   font-size: 1.5rem;
 }
 
@@ -101,5 +105,5 @@ html * {
 .play-again-btn:hover {
   background-color: #ff5900;
   color: white;
-  transition: all .2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
